[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Justin Heyes-Jones <justinhj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.4"
image = "0.13.0"
num_cpus = "1.13.1"
crossbeam = "0.8"
termion = "1.5.6"
