[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Justin Heyes-Jones <justinhj@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
rand = "0.10.0"
image = "0.25.9"
num_cpus = "1.17.0"
crossbeam = "0.8.4"
termion = "4.0.6"
float-cmp = "0.10.0"
anyhow = "1.0"
